--- a/compose.yaml
+++ b/compose.yaml
@@ -101,6 +101,7 @@ services:
     container_name: portainer2
     restart: always
     networks:
+      - portainer2
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - portainer_data:/data
