--- a/conf/caddy2/Caddyfile
+++ b/conf/caddy2/Caddyfile
@@ -1,7 +1,7 @@
 {
     # Global options block
     email hello@repasscloud.com  # Email for Let's Encrypt certificate notifications
-    acme_ca https://acme-v02.api.letsencrypt.org/directory # Let's Encrypt ACME URL
+    # acme_ca https://acme-v02.api.letsencrypt.org/directory # Uncomment if using a custom ACME server
 }
 
 dev03.reyatra.com {
@@ -30,7 +30,8 @@ dev03.reyatra.com {
         Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
     }
 
-    encode gzip
+    # Enable gzip and zstd compression
+    encode gzip zstd
 
     # Logging
     log {
