update caddy2 test

--- a/compose.yaml
+++ b/compose.yaml
@@ -73,10 +73,10 @@ services:
       - "443:443"
       - "443:443/udp"
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost"]
+      test: ["CMD", "/bin/ping", "-4", "-c", "1", "localhost"]
       interval: 1m30s
       timeout: 10s
-      retries: 3
+      retries: 1
       start_period: 1m30s
 
   adminer:
