--- a/compose.yaml
+++ b/compose.yaml
@@ -37,19 +37,19 @@ services:
       retries: 3
       start_period: 1m30s
 
-  nginx:
-    depends_on:
-      - wordpress
-    image: nginx:1.27.1-alpine3.20
-    container_name: nginx
-    volumes:
-      - "./conf/nginx/nginx.conf:/etc/nginx/nginx.conf"
-      - "./conf/nginx/default.conf:/etc/nginx/conf.d/default.conf"
-      - "wordpress_data:/var/www/html"
-      - "./logs/nginx:/var/log/nginx"
-    networks:
-      - frontend
-      - backend
+  # nginx:
+  #   depends_on:
+  #     - wordpress
+  #   image: nginx:1.27.1-alpine3.20
+  #   container_name: nginx
+  #   volumes:
+  #     - "./conf/nginx/nginx.conf:/etc/nginx/nginx.conf"
+  #     - "./conf/nginx/default.conf:/etc/nginx/conf.d/default.conf"
+  #     - "wordpress_data:/var/www/html"
+  #     - "./logs/nginx:/var/log/nginx"
+  #   networks:
+  #     - frontend
+  #     - backend
 
   caddy2:
     depends_on:
@@ -66,6 +66,7 @@ services:
       - "caddy_config:/config"
       - "./logs/caddy2:/var/log/caddy"
       - "./conf/caddy2/Caddyfile:/etc/caddy/Caddyfile"
+      - "wordpress_data:/var/www/html"
     restart: unless-stopped
     ports:
       - "80:80"
@@ -119,6 +120,7 @@ networks:
   frontend:
     name: frontend
     driver: bridge
+    external: true
   backend:
     name: backend
     driver: bridge
