--- a/compose.yaml
+++ b/compose.yaml
@@ -53,7 +53,7 @@ services:
 
   caddy2:
     depends_on:
-      - nginx
+      - wordpress
     image: caddy:2.8.4-alpine
     container_name: caddy2
     networks:
