--- a/compose.yaml
+++ b/compose.yaml
@@ -13,17 +13,19 @@ services:
       - "wordpress_data:/var/www/html"
 
   wordpress:
+    name: wordpress
     image: wordpress:php8.3-fpm-alpine
     restart: unless-stopped
     depends_on:
-      - wp-db
+      - mariadb
     env_file:
       "./env/wordpress.env"
     volumes:
       - "wordpress_data:/var/www/html"
       - "./conf/wordpress/custom.ini:/usr/local/etc/php/conf.d/uploads.ini"
 
-  wp-db:
+  mariadb:
+    name: mariadb
     image: mariadb:lts-ubi9
     volumes:
       - "mariadb_data:/var/lib/mysql"
